--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,173 @@
-.flex, body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+body {
+  background: #4d4dff;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  margin: 0;
 }
 
-body {
-  flex-direction: column;
-  height: 100%;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: normal;
+  position: relative;
+}
+
+.head {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  border: 10px solid black;
+  background: #e6e6e6;
+  position: relative;
+}
+
+.head::before {
+  content: "";
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  box-shadow: inset -22px 5px 0 3px rgba(0, 0, 0, 0.2);
+}
+
+.head::after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 30px;
+  background: #e6e6e6;
+  margin-top: 300px;
+  border: 10px solid black;
+}
+
+.left, .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: black;
+  border-radius: 50%;
+  width: 175px;
+  height: 175px;
+  position: absolute;
+  align-items: center;
+}
+
+.left {
+  margin-left: -180px;
+}
+
+.right {
+  margin-left: 180px;
+}
+
+.left::before, .right::before {
+  content: "";
+  position: absolute;
+  width: 175px;
+  height: 175px;
+  border-radius: 50%;
+  box-shadow: inset -22px 5px 0 3px rgba(255, 255, 255, 0.164);
+}
+
+.left::after, .right::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: red;
+  border-radius: 50%;
+}
+
+.right::after {
+  width: 30px;
+  height: 30px;
+  background: transparent;
+  border: 5px solid red;
+}
+
+.cutout {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background: #e6e6e6;
+  border-radius: 50%;
+  align-self: flex-end;
+  margin-bottom: -50px;
+}
+
+.mouth {
+  width: 180px;
+  height: 180px;
+  position: absolute;
+  border: 10px solid black;
+  border-radius: 50%;
+  align-self: center;
+  -webkit-clip-path: circle(60% at 49% 100%);
+          clip-path: circle(60% at 49% 100%);
+}
+.mouth::before, .mouth::after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 10px solid black;
+  top: 102px;
+  left: -9px;
+  -webkit-clip-path: circle(50% at 0 0%);
+          clip-path: circle(50% at 0 0%);
+}
+.mouth::after {
+  left: 140px;
+  top: 107px;
+  -webkit-clip-path: circle(50% at 100% 0%);
+          clip-path: circle(50% at 100% 0%);
+}
+
+.body {
+  position: absolute;
+  width: 100px;
+  height: 50px;
+  background: red;
+  top: 345px;
+  border: 10px solid black;
+  border-radius: 100% 100% 100% 100%/100% 100% 0% 0%;
+}
+.body::before, .body::after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 20px;
+  top: 30px;
+}
+.body::before {
+  border-right: 10px solid black;
+}
+.body::after {
+  border-left: 10px solid black;
+  right: 0;
+}
+
+.bg {
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  left: -100px;
+  border-radius: 30%;
+  top: 20px;
+  box-shadow: 10px 50px 0 0 rgba(0, 0, 0, 0.15), 400px 100px 0 0 rgba(0, 0, 0, 0.15), 10px 190px 0 0 rgba(0, 0, 0, 0.15), 400px 250px 0 0 rgba(0, 0, 0, 0.15);
+  animation: bgAnim 3s infinite alternate;
+}
+
+@keyframes bgAnim {
+  from {
+    box-shadow: 10px 50px 0 0 rgba(0, 0, 0, 0.15), 400px 100px 0 0 rgba(0, 0, 0, 0.15), 10px 190px 0 0 rgba(0, 0, 0, 0.15), 400px 250px 0 0 rgba(0, 0, 0, 0.15);
+  }
+  to {
+    box-shadow: 40px 50px 0 0 rgba(0, 0, 0, 0.15), 450px 100px 0 0 rgba(0, 0, 0, 0.15), 40px 190px 0 0 rgba(0, 0, 0, 0.15), 450px 250px 0 0 rgba(0, 0, 0, 0.15);
+  }
 }/*# sourceMappingURL=main.css.map */
